--- a/src/styles.css
+++ b/src/styles.css
@@ -6,8 +6,10 @@ body {
     margin: 30px, 0px;
     height: 3vw;
     display: flex;
+    flex-direction: row;
+    align-items: center;
     padding-bottom: 8px;
-    border-bottom: 3px solid rgb(223, 220, 220);
+    justify-content: space-between;
 }
 
 .nav-elem {
@@ -37,30 +39,34 @@ body {
 }
 
 .nav-search {
-    flex-grow: 1;
-    color: #555;
+    width: 100%;
     display: flex;
-    padding: inherit;
-    border-radius: 5px;
+    flex-direction: row;
+    position: relative;
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
+    border-radius: 20px;
+    border: black 1px solid;
+    background-color: white;
+    position: relative;
+    align-items: center;
 }
 
 .search-bar {
     border: none;
-    background: transparent;
-    margin: 5px;
-    font-size: 14px;
-    color: inherit;
-    border: 1px solid black;
-    width: 80%;
-    height: 100%;
-    border-radius: 20px;
+    position: relative;
+    flex-grow: 1;
+    float: left;
+    background: none;
 }
 
 .search-button {
     height: 100%;
     border: 0px;
+    border: none;
+    background: none;
     background-color: transparent;
-    overflow: hidden;
     width: 40px;
     padding: 0;
     margin: 0;
@@ -75,4 +81,37 @@ body {
     border: 2px black solid;
     height: 100%;
     padding: inherit;
+}
+
+.section01 {
+    margin: 0% 20%;
+    font-size: 0.8rem;
+    background-color: #f8f9fb;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: relative;
+    width: 80%;
+    align-items: center;
+    margin: auto;
+    padding: auto;
+}
+
+.section01-1 {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    margin-top: -15%;
+    margin: 3rem 7rem;
+    height: 60%;
+    width: 40%;
+    padding: 3%;
+    padding-bottom: 5rem;
+    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.3);
+}
+
+.section01-2 {
+    width: 50%;
+    margin: 0rem;
 }
